// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`3in2 store adapter should put Arrays onto .value instead of splatting them 1`] = `
Object {
  "value": Array [],
}
`;

exports[`3in2 store adapter should put Maps/Sets onto .value instead of splatting them 1`] = `
Object {
  "value": Map {},
}
`;

exports[`3in2 store adapter should put Maps/Sets onto .value instead of splatting them 2`] = `
Object {
  "value": Set {},
}
`;

exports[`3in2 store adapter should render readable stores that return a simple value 1`] = `
<div>
  0
</div>
`;

exports[`3in2 store adapter should render readable stores that return a simple value 2`] = `
<div>
  1
</div>
`;

exports[`3in2 store adapter should render readable stores that return an object 1`] = `
<div>
  0 - 0
</div>
`;

exports[`3in2 store adapter should render readable stores that return an object 2`] = `
<div>
  fooga - wooga
</div>
`;

exports[`3in2 store adapter should render writable stores that return a simple value 1`] = `
<div>
  0
</div>
`;

exports[`3in2 store adapter should render writable stores that return a simple value 2`] = `
<div>
  1
</div>
`;

exports[`3in2 store adapter should render writable stores that return an object 1`] = `
<div>
  0 - 0
</div>
`;

exports[`3in2 store adapter should render writable stores that return an object 2`] = `
<div>
  fooga - wooga
</div>
`;

exports[`3in2 store adapter should throw if .set() is called against a readable store 1`] = `"Called .set() on a readable store"`;

exports[`3in2 store adapter should update the underlying store when .set() is called 1`] = `
Object {
  "value": 1,
}
`;

exports[`3in2 store adapter should update the underlying store when .set() is called 2`] = `1`;
